references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/BindingConnector_Invalid3.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:b9b89f068368b5958b066d6e0d1ff30c627143600e04f39e42ff115b8583f463
size 1673
